# kotodori

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: load_file.rs  test.dump  test.dump2
src/: bus.rs  cmd.rs  conf.rs  cpu.rs  dbg.rs  dram.rs  emulator.rs  lib.rs  main.rs  plic.rs  uart.rs  util.rs  virtio.rs
src/cpu/: instructions.rs  instructions.rs:Zone.Identifier  int.rs  mod.rs  register.rs  trap.rs
tools/: dmp.sh  main.c  main.dump
tools/ref/: oplist.txt
