[package]
name = "kotodori"
version = "0.1.0"
authors = ["kkmtyyz <45735463+kkmtyyz@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "RISC-V emulator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
